--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css" integrity="sha512-Fo3rlrZj/k7ujTnHq6bZdD1ILqczV/y5Q1X1g/7Ndr0MGeb+Hug/l7XrPq7QLo9RxF6kHD4Un5b2D4R9+EfoA==" crossorigin="anonymous" referrerpolicy="no-referrer" />
+    <script src="https://cdn.jsdelivr.net/npm/fuse.js@6.4.6/dist/fuse.min.js"></script>
 </head>
 <body>
     <div class="container">
@@ -14,7 +15,7 @@
         
         <div class="search-section">
             <input type="text" id="search-input" placeholder="Search use cases...">
-            <button onclick="searchUseCases()"><i class="fas fa-search"></i> Search</button>
+            <button><i class="fas fa-search"></i> Search</button>
         </div>
         
         <div id="results"></div>
