--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         
         <div class="search-section">
             <input type="text" id="search-input" placeholder="Search use cases...">
-            <button><i class="fas fa-search"></i> Search</button>
+            <button id="search-button"><i class="fas fa-search"></i> Search</button>
         </div>
         
         <div id="results"></div>
